--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "saas-assignment",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "saas-assignment",
+	"version": "0.1.0",
+	"private": true,
+	"author": "nirav11.work@gmail.com",
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,scss,html}' --config ./.prettierrc.json"
+	},
+	"dependencies": {
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"next": "15.1.2"
+	},
+	"devDependencies": {
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"eslint": "^9",
+		"prettier": "^2.8.7",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-config-next": "15.1.2",
+		"@eslint/eslintrc": "^3"
+	}
 }
